# TestGenerator

./: .env.example  .gitignore  DEPLOYMENT_SUMMARY.md  PROJECT_SUMMARY.md  README.md  TECHNICAL_APPROACH.md  demo.py  run_real_example.py  setup.bat  setup.sh
config/: build_fix.yaml  coverage_improvement.yaml  initial_test_generation.yaml  project_config.json  test_refinement.yaml
demo_generated_tests/: test_Department.cpp  test_LoginFilter.cpp  test_PersonInfo.cpp  test_generation_report.md  test_main.cpp
generated_tests/: CMakeLists.txt  TEST_GENERATION_REPORT.md  test_AuthController.cpp  test_Department.cpp  test_DepartmentsController.cpp  test_Job.cpp  test_JobsController.cpp  test_Jwt.cpp  test_JwtPlugin.cpp  test_LoginFilter.cpp  test_Person.cpp  test_PersonInfo.cpp  test_PersonsController.cpp  test_User.cpp  test_main.cpp  test_utils.cpp
real_generated_tests/: test_main.cpp
src/: demo_provider.py  test_generator.py
